--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,12 @@
   "author": "Mario Suarez",
   "license": "ISC",
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
+    "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.4.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
