--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,10 @@
     "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.1",
     "react": "18.2.0",
+    "react-bootstrap": "2.5.0",
     "react-dom": "18.2.0",
     "react-icons": "4.4.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^2.1.3"
   },
   "browserslist": {
     "production": [
