--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.1",
+    "dart-sass": "^1.25.0",
     "react": "18.2.0",
     "react-bootstrap": "2.5.0",
     "react-dom": "18.2.0",
