--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,17 @@
   "license": "ISC",
   "dependencies": {
     "@popperjs/core": "2.11.6",
+    "@reduxjs/toolkit": "^1.8.6",
     "bootstrap": "5.2.1",
     "dart-sass": "^1.25.0",
     "react": "18.2.0",
     "react-bootstrap": "2.5.0",
     "react-dom": "18.2.0",
     "react-icons": "4.4.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0"
   },
   "browserslist": {
     "production": [
@@ -36,5 +39,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+		"eslint": "8.19.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-config-standard": "17.0.0",
+		"eslint-plugin-import": "2.26.0",
+		"eslint-plugin-n": "15.2.4",
+		"eslint-plugin-promise": "6.0.0",
+		"eslint-plugin-react": "7.30.1",
+		"prettier": "2.7.1"
+	}
 }
