--- a/client/package.json
+++ b/client/package.json
@@ -41,13 +41,14 @@
     ]
   },
   "devDependencies": {
-		"eslint": "8.19.0",
-		"eslint-config-prettier": "8.5.0",
-		"eslint-config-standard": "17.0.0",
-		"eslint-plugin-import": "2.26.0",
-		"eslint-plugin-n": "15.2.4",
-		"eslint-plugin-promise": "6.0.0",
-		"eslint-plugin-react": "7.30.1",
-		"prettier": "2.7.1"
-	}
+    "eslint": "8.19.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "15.2.4",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "2.7.1"
+  }
 }
