--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@popperjs/core": "2.11.6",
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.2.0",
     "bootstrap": "5.2.1",
     "dart-sass": "^1.25.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-bootstrap": "2.5.0",
     "react-dom": "18.2.0",
